[package]
name = "qoj-core"
version = "0.1.0"
authors = ["quickshell"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1"
actix-web = "2"
qoj-interface = { git = "https://github.com/quickn-oj/qoj-interface" }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
lazy_static = "1.4.0"